change some code

--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,5 +1,10 @@
 {% extends "index.html" %}
 {% block title %}Gallery {% endblock %}
 {% block content %}
+<div class="container"><br>
+	
+	<h1><a href="#">Gambar</a></h1>
+	<h2><a href="#">Video</a></h2>
 
+</div>
 {% endblock %}
