--- a/templates/404.html
+++ b/templates/404.html
@@ -1,12 +1,7 @@
-{% extends "admin/base_site.html" %}
-{% load i18n %}
-
-{% block title %}{% trans 'Page not found' %}{% endblock %}
-
+{% extends "index.html" %}
+{% block title %}FAQ {% endblock %}
 {% block content %}
-
-<h2>{% trans 'Page not found' %}</h2>
-
-<p>{% trans "We're sorry, but the requested page could not be found." %}</p>
+<h1 class="container">OOPs !</h1>
+<h2 class="containner">Maaf Link yang anda request salah, kembali ke <a href="{% url depan %}">Halaman Depan</a></h2>
 
 {% endblock %}
