--- a/templates/hubungi.html
+++ b/templates/hubungi.html
@@ -1,12 +1,19 @@
 {% extends "index.html" %}
 {% block title %}Hubungi {% endblock %}
 {% block content %}
-
-<div class="hero-unit" style="margin-top: 10px;">
-        	<ul>
-        		<li>HP. xxxxxxxxxxxxx</li>
-        		<li>Mail. ilc2013@acehlinux.org</li>
-        		<li>Mail. xxxxxxxxxxxxx</li>
-        	</ul>	
-            </div>
+  </p>
+  <div class="hero-unit" style="margin-top: 10px;">
+   <ul>
+    <li>
+     HP. xxxxxxxxxxxxx
+    </li>
+    <li>
+     Mail. ilc2013@acehlinux.org
+    </li>
+    <li>
+     Mail. xxxxxxxxxxxxx
+    </li>
+   </ul>
+  </div>
 {% endblock %}
+
