--- a/templates/jadwal.html
+++ b/templates/jadwal.html
@@ -1,31 +1,46 @@
 {% extends "index.html" %}
 {% block title %}Jadwal {% endblock %}
 {% block content %}
+  </p>
+  <div class="bs-docs-example">
+   <br/>
+   <br/>
+   <table class="table table-striped table-hover" style="">
+    <thead>
+     <tr>
+      <th>
+       Kegiatan
+      </th>
+      <th>
+       Tanggal
+      </th>
+      <th>
+       Speaker
+      </th>
+      <th>
+       Status
+      </th>
+     </tr>
+    </thead>
+    <tbody>
+     {% for jadwal in JAdwal %}
+     <tr>
+      <td>
+       {{ jadwal.kegiatan }}
+      </td>
+      <td>
+       {{ jadwal.tanggal }}
+      </td>
+      <td>
+       {{ jadwal.pembicara }}
+      </td>
+      <td>
+       {{ jadwal.status }}
+      </td>
+     </tr>
+     {% endfor %}
+    </tbody>
+   </table>
+  </div>
+  {% endblock %}
 
-<div class="bs-docs-example">
-			<br><br>
-            <table class="table table-striped table-hover" style="">
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Kegiatan</th>
-                  <th>Tanggal</th>
-                  <th>Speaker</th>
-                  <th>Status</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for jadwal in JAdwal %}
-                <tr>
-                  <td></td>
-                  <td>{{ jadwal.kegiatan }}</td>
-                  <td>{{ jadwal.tanggal }}</td>
-                  <td>{{ jadwal.pembicara }}</td>
-                  <td>{{ jadwal.status }}</td>
-                </tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </div>
-
-{% endblock %}
