--- a/templates/penginapan.html
+++ b/templates/penginapan.html
@@ -1,25 +1,42 @@
-{% extends "index.html" %}
-{% block title %}Penginapan {% endblock %}
+  {% extends "index.html" %}
+{% block title %}Hubungi {% endblock %}
 {% block content %}
-         <div class="bs-docs-example">
-			<br><br>
-            <table class="table table-striped table-hover" style="">   
-                <tr>
-                	<th>Penginapan</th>
-                	<th>Harga</th>
-                	<th>Alamat</th>
-                	<th>Website</th>
-                </tr>
-                {% for nginap in PEnginapan %}
-                <tr>
-                  <td>{{ nginap.penginapan }}</td>
-                  <td>{{ nginap.harga }}</td>
-                  <td>{{ nginap.Alamat }}</td>
-                  <td>{{ nginap.website }}</td>
-                </tr>
-             	{% endfor %}
-             </table>
-          </div>
+  </p>
+  <div class="bs-docs-example">
+   <br/>
+   <br/>
+   <table class="table table-striped table-hover" style="">
+    <tr>
+     <th>
+      Penginapan
+     </th>
+     <th>
+      Harga
+     </th>
+     <th>
+      Alamat
+     </th>
+     <th>
+      Website
+     </th>
+    </tr>
+    {% for penginapan in PEnginapan %}
+    <tr>
+     <td>
+      {{ penginapan.penginapan }}
+     </td>
+     <td>
+      {{ penginapan.harga }}
+     </td>
+     <td>
+      {{ penginapan.Alamat }}
+     </td>
+     <td>
+      {{ penginapan.website }}
+     </td>
+    </tr>
+    {% endfor %}
+   </table>
+  </div>
+  {% endblock %}
 
-
-{% endblock %}
