--- a/templates/sponsor.html
+++ b/templates/sponsor.html
@@ -1,28 +1,39 @@
-{% extends "index.html" %}
+   {% extends "index.html" %}
 {% block title %}Sponsor {% endblock %}
 {% block content %}
-<div class="bs-docs-example">
-			<br><br>
-            <table class="table table-striped table-hover" style="">
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Sponsor/Partner</th>
-                  <th>Website</th>
-                </tr>
-              </thead>
-              <tbody>
-               {% for sponsor in SPonsor %}
-                <tr>
-                  <td></td>
-                  <td>{{ sponsor.by }}</td>
-                  <td>{{ sponsor.webiste }}</td>
-                </tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </div>
+  </p>
+  <div class="bs-docs-example">
+   <br/>
+   <br/>
+   <table class="table table-striped table-hover" style="">
+    <thead>
+     <tr>
+      <th>
+       #
+      </th>
+      <th>
+       Sponsor/Partner
+      </th>
+      <th>
+       Website
+      </th>
+     </tr>
+    </thead>
+    <tbody>
+     {% for sponsor in SPonsor %}
+     <tr>
+      <td>
+      </td>
+      <td>
+       {{ sponsor.by }}
+      </td>
+      <td>
+       {{ sponsor.webiste }}
+      </td>
+     </tr>
+     {% endfor %}
+    </tbody>
+   </table>
+  </div>
+  {% endblock %}
 
-
-
-{% endblock %}
