--- a/templates/daftar.html
+++ b/templates/daftar.html
@@ -1,6 +1,9 @@
 {% extends "index.html" %}
 {% block title %}daftar {% endblock %}
 {% block content %}
+ <h3><u>Pendaftaran</u></h3>
 
+<h5>Setelah anda mendaftar cek biaya penginapan <a href="{% url penginapan %}">disini</a>.<br>
+Dan apabila anda ingin menghubungi kami silahkan <a href="{% url hubungi %}">ke sini</a>.</h5>
 
 {% endblock %}
