--- a/templates/informasi.html
+++ b/templates/informasi.html
@@ -1,6 +1,7 @@
 {% extends "index.html" %}
-{% block title %}daftar {% endblock %}
+{% block title %}Berita {% endblock %}
 {% block content %}
+   <h3><u>Berita dan Informasi</u></h3>
    <br/>
    <br/>
   </p>
