--- a/templates/sponsor.html
+++ b/templates/sponsor.html
@@ -3,8 +3,9 @@
 {% block content %}
   </p>
   <div class="bs-docs-example">
-   <br/>
-   <br/>
+  	<h5> Jika Anda ingin menjadi Sponsor/Partner kami silahkan <a href="#">unduh berkas</a>.</h5>	
+  	<br />
+  	<h4> Sponsor Dan Partner.</h4><br />
    <table class="table table-striped table-hover" style="">
     <thead>
      <tr>
