--- a/media/css/style.css
+++ b/media/css/style.css
@@ -32,3 +32,31 @@ margin:0px;
 }
 
 
+#sponsor {
+	margin-left: 200px;	
+	width: 700px;
+}
+
+#sponsor ul li{
+	display: block;
+	float: left;
+	padding: 5px;
+}
+
+
+#sponsor ul li a{
+	
+
+}
+#sponsor img{
+	width: 50px;
+	height: 50px;
+}
+
+
+#footer {
+	clear: both;
+	margin-top: 120px;
+}
+
+
