--- a/templates/jadwal.html
+++ b/templates/jadwal.html
@@ -3,8 +3,10 @@
 {% block content %}
   </p>
   <div class="bs-docs-example">
+   <h5><a href="#"> Ingin Menjadi Pemateri ? </a></h5>
    <br/>
    <br/>
+   
    <table class="table table-striped table-hover" style="">
     <thead>
      <tr>
@@ -15,7 +17,7 @@
        Tanggal
       </th>
       <th>
-       Speaker
+       Pembicara
       </th>
       <th>
        Status
