--- a/media/css/style.css
+++ b/media/css/style.css
@@ -40,7 +40,8 @@ margin:0px;
 #sponsor ul li{
 	display: block;
 	float: left;
-	padding: 5px;
+	padding: 6px;
+	border-right: 1px dotted gray;
 }
 
 
@@ -51,6 +52,7 @@ margin:0px;
 #sponsor img{
 	width: 50px;
 	height: 50px;
+	
 }
 
 
