--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@ nasional.<br />
    		<h5 style="margin-left: 40px;"> Sponsor/Partner</h5>
    		<ul>
    			{% for sponsor_img in Spons_gambar %}
-   			<li><a href="/media/{{ sponsor_img.gambar }}"><img src="/media/{{ sponsor_img.gambar }}" /><a/></li>
+   			<li><a href="/media/{{ sponsor_img.gambar }}" target=blank><img src="/media/{{ sponsor_img.gambar }}" /><a/></li>
    			{% endfor %}	
    			
    			
