--- a/templates/500.html
+++ b/templates/500.html
@@ -2,6 +2,6 @@
 {% block title %}FAQ {% endblock %}
 {% block content %}
 <h1 class="container">OOPs !</h1>
-<h2 class="containner">Maaf Link yang anda request salah, kembali ke <a href="{% url depan %}">Halaman Depan</a></h2>
+<h2 class="containner">500 <a href="{% url depan %}">Halaman Depan</a></h2>
 
 {% endblock %}
