--- a/templates/index.html
+++ b/templates/index.html
@@ -2,45 +2,45 @@
 <html>
  <head>
   <title>
-   {% block title %}ILC2013 {% endblock %}
+   {% block title %} ILC 2013 {% endblock %}
   </title>
   <link href="media/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
   <link href="media/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"/>
   <link href="media/css/style.css" rel="stylesheet" type="text/css"/>
-  <script src="media/js/bootstrap.min.js" type="text/javascript">
-  </script>
+  <script src="media/js/bootstrap.min.js" type="text/javascript"></script>
+  <link rel="icon" type="image/png"  href="/media/img/ilclogo.jpg">
+  <meta name="robots" content="index, follow" />
+  <meta name="designer" content="TEAM ILC2013"/>
   <meta content="ilc 2013" name="author"/>
   <meta content="ILC is indonesian linux conference" name="description"/>
+  <meta name="author" content="TEAM ILC2013">
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
  </head>
  <body>
-  
-  
   <br/>
+ 
   <div class="container">
    <div class="navbar">
   	<div class="navbar-inner">
     	<a class="brand" href=" {% url depan %}">ILC2013</a>
+   			 {% block menu %}
    			 <ul class="nav">
-    			  <li><a href="{% url depan %}">Depan</a></li>
-    			   <li><a href="{% url informasi %}">Berita</a></li>
+    			  <li class="active"><a  href="{% url depan %}">Depan</a></li>
+    			  <li><a href="{% url informasi %}">Berita</a></li>
     			  <li><a href="{% url daftar %}">Pendaftaran</a></li>
     			  <li><a href="{% url penginapan %}">Penginapan</a></li>
     			  <li><a href="{% url jadwal %}">Jadwal</a></li>
     			  <li><a href="{% url sponsor %}">Sponsor</a></li>
     			  <li><a href="{% url faq %}">FAQ</a></li>
-    			
     			  <li><a href="{% url hubungi %}">Hubungi</a></li>
+  			
    			 </ul>
-
-
-	</div>
+  			{% endblock %}
+  	</div>
    </div>
   </div>
+  
   <div class="container">
-<!--   <script type="text/javascript">-->
-<!--    document.write("<a>"+window.location+"</a>");-->
-<!--   </script>-->
    {% block content %}
    <div class="page-header">
     <h1>
@@ -89,22 +89,22 @@ nasional.<br />
      <a class="btn btn-info" href="{% url sponsor %}" target="_blank">
       Menjadi Sponsor/Partner  »     </a>
     </p>
-   	<p><i>Jika ada kejanggalan <a href="#">hubungi kami<a/></i>.</p>
+   	<p><i>Jika ada kejanggalan <a href="{% url hubungi %}">hubungi kami<a/></i>.</p>
    </div>
   	
-   
+  <div id="container">
    <div id="sponsor">
-   		<h5 style="margin-left: 40px;"> Sponsor/Partner</h5>
+   		<h5> Sponsor/Partner</h5>
    		<ul>
    			{% for sponsor_img in Spons_gambar %}
-   			<li><a href="/media/{{ sponsor_img.gambar }}" target=blank><img src="/media/{{ sponsor_img.gambar }}" /><a/></li>
+   			<li><a href="/media/{{ sponsor_img.gambar }}" target=blank><img src="/media/{{ sponsor_img.gambar }}" class="img-rounded" /><a/></li>
    			{% endfor %}	
    			
    			
    		</ul>	
    
    </div>
-   
+   </div>
    
     {% endblock %}
    <div id="footer">
