--- a/templates/index.html
+++ b/templates/index.html
@@ -22,17 +22,17 @@
   <div class="container">
    <div class="navbar">
   	<div class="navbar-inner">
-    	<a class="brand" href=" {% url depan %}">ILC2013</a>
+    	<a class="brand" href=" {% url "depan" %}">ILC2013</a>
    			 {% block menu %}
    			 <ul class="nav">
-    			  <li class="active"><a  href="{% url depan %}">Depan</a></li>
-    			  <li><a href="{% url informasi %}">Berita</a></li>
-    			  <li><a href="{% url daftar %}">Pendaftaran</a></li>
-    			  <li><a href="{% url penginapan %}">Penginapan</a></li>
-    			  <li><a href="{% url jadwal %}">Jadwal</a></li>
-    			  <li><a href="{% url sponsor %}">Sponsor</a></li>
-    			  <li><a href="{% url faq %}">FAQ</a></li>
-    			  <li><a href="{% url hubungi %}">Hubungi</a></li>
+    			  <li class="active"><a  href="{% url "depan" %}">Depan</a></li>
+    			  <li><a href="{% url "informasi" %}">Berita</a></li>
+    			  <li><a href="{% url "daftar" %}">Pendaftaran</a></li>
+    			  <li><a href="{% url "penginapan" %}">Penginapan</a></li>
+    			  <li><a href="{% url "jadwal" %}">Jadwal</a></li>
+    			  <li><a href="{% url "sponsor" %}">Sponsor</a></li>
+    			  <li><a href="{% url "faq" %}">FAQ</a></li>
+    			  <li><a href="{% url "hubungi" %}">Hubungi</a></li>
   			
    			 </ul>
   			{% endblock %}
@@ -81,15 +81,15 @@ nasional.<br />
          </p>
     <br />
     <p>
-     <a class="btn btn-info" href="{% url daftar %}" target="_blank">
+     <a class="btn btn-info" href="{% url "daftar" %}" target="_blank">
       Ayo Mendaftar »
      </a>
     </p>
     <p>
-     <a class="btn btn-info" href="{% url sponsor %}" target="_blank">
+     <a class="btn btn-info" href="{% url "sponsor" %}" target="_blank">
       Menjadi Sponsor/Partner  »     </a>
     </p>
-   	<p><i>Jika ada kejanggalan <a href="{% url hubungi %}">hubungi kami<a/></i>.</p>
+   	<p><i>Jika ada kejanggalan <a href="{% url "hubungi" %}">hubungi kami<a/></i>.</p>
    </div>
   	
   <div id="container">
